--- a/views/detail.pug
+++ b/views/detail.pug
@@ -40,12 +40,12 @@ block content
                             a(href='') Diet Coca Cola
             .images
                  #top.top_images(style='left:0px;')
-                    img#picture(src=`/uploads/${product.image}`, alt="product picture")
+                    img#picture(src=`${product.image}`, alt="product picture")
 
                  #bottom.bottom_images
-                    img(src=`/uploads/${product.image}`, alt="product picture")
-                    img(src=`/uploads/${product.image}`, alt="product picture")
-                    img(src=`/uploads/${product.image}`, alt="product picture")
+                    img(src=`${product.image}`, alt="product picture")
+                    img(src=`${product.image}`, alt="product picture")
+                    img(src=`${product.image}`, alt="product picture")
             .description
                 header.product_des
                     h1 Description
