--- a/views/login.pug
+++ b/views/login.pug
@@ -3,9 +3,11 @@ extends default
 block content
     link(rel="stylesheet", href="/stylesheets/login.css")
     
-    div(class = "login-page")
-        div(class = "form")
-            form(id="login-form", method="POST")
-                input(required type="text", name="username", placeholder="username")
-                input(required type="password", name="password", placeholder="password")
-                button(type="submit") Login
+    form(action='#0', id="login-form", method="POST")
+        div
+            input#username(type='text', name='username', required='', placeholder=' ')
+            label(for='username')  UserName
+        div
+            input#password(type='password', name='password', required='', placeholder=' ', pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}')
+            label(for='password') Password
+        input(type='submit', value='Login')
