--- a/views/login.pug
+++ b/views/login.pug
@@ -8,6 +8,6 @@ block content
             input#username(type='text', name='username', required='', placeholder=' ')
             label(for='username')  UserName
         div
-            input#password(type='password', name='password', required='', placeholder=' ', pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}')
+            input#password(type='password', name='password', required='', placeholder=' ')
             label(for='password') Password
         input(type='submit', value='Login')
