--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -7,16 +7,16 @@ block content
         form(method="POST", enctype="multipart/form-data")
             .form-group
                 label(for="productName") Product Name:
-                input(type="text", id="productName", class="form-control", name="productName", placeholder="product name")
+                input(type="text", id="productName", class="form-control", name="productName", required='', placeholder="product name")
             .custom-file
-                input(type="file", id="productImage", class="custom-file-input", name="productImage")
+                input(type="file", id="productImage", class="custom-file-input",required='', name="productImage")
                 label(class="custom-file-label" for="productImage") Choose file
             .form-group
                 label(for="description") Product Description:
                 textarea(id="productDescription", class="form-control", rows=5, name="description", placeholder="product description")
             .form-group
                 label(for="category")
-                select(id="category", class="custom-select", name="category")
+                select(id="category", class="custom-select",required='', name="category")
                     option(selected) Product Category
                     each category in categories
                         option #{category.name}
