--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -16,6 +16,7 @@ form > div > label {
     left: 20px;
 }
 form > div > input[type="text"],
+form > div > input[type="email"],
 form > div > input[type="password"] {
     width: 100%;
     border: 0;
@@ -23,23 +24,54 @@ form > div > input[type="password"] {
     background: #eee;
 }
 form > div > input[type="text"]:focus,
+form > div > input[type="email"]:focus,
 form > div > input[type="password"]:focus {
     outline: 0;
     background: white;
 }
 form > div > input[type="text"]:focus + label,
+form > div > input[type="email"]:focus + label,
 form > div > input[type="password"]:focus + label {
     opacity: 0;
 }
 form > div > input[type="text"]:valid,
+form > div > input[type="email"]:valid,
 form > div > input[type="password"]:valid {
     background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/check.svg);
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 20px 20px;
 }
-
-
+form > div > input[type="text"]:valid + label,
+form > div > input[type="email"]:valid + label,
+form > div > input[type="password"]:valid + label {
+    opacity: 0;
+}
+form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown),
+form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown),
+form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) {
+    background: pink;
+}
+form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown) + label,
+form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown) + label,
+form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) + label {
+    opacity: 0;
+}
+form > div > input[type="text"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
+form > div > input[type="email"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
+form > div > input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .requirements {
+    max-height: 200px;
+    padding: 0 30px 20px 50px;
+}
+form > div .requirements {
+    padding: 0 30px 0 50px;
+    color: #999;
+    max-height: 0;
+    transition: 0.28s;
+    overflow: hidden;
+    color: red;
+    font-style: italic;
+}
 form input[type="submit"] {
     display: block;
     width: 100%;
