--- a/public/stylesheets/products.css
+++ b/public/stylesheets/products.css
@@ -3,7 +3,7 @@
     padding: 16px;
     text-align: center;
     background-color: #f1f1f1;
-    font-family: arial;
+    font-family: Palatino, "palatino LT STD","Palatino Linotype","Book Antiqua", Georgia , serif;
 }
 
 #addProduct {
