--- a/views/products.pug
+++ b/views/products.pug
@@ -6,7 +6,7 @@ block content
     .container-fluid
         .row
             div(id="addProduct", class='col-md-3 card')
-                img(src="/images/addpic.png", style="width:100%")
+                img(src="/images/plusIcon.png", style="width:100%")
                 a(href="/addProduct") Add Product
             each product in products
                 div(class="col-md-3 card")
