--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,69 +1,69 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
-form {
+#login-form {
     max-width: 450px;
     margin: 0 auto;
 }
-form > div {
+#login-form > div {
     position: relative;
     background: white;
     border-bottom: 1px solid #ccc;
 }
-form > div > label {
+#login-form > div > label {
     opacity: 0.3;
     font-weight: bold;
     position: absolute;
     top: 22px;
     left: 20px;
 }
-form > div > input[type="text"],
-form > div > input[type="email"],
-form > div > input[type="password"] {
+#login-form > div > input[type="text"],
+#login-form > div > input[type="email"],
+#login-form > div > input[type="password"] {
     width: 100%;
     border: 0;
     padding: 20px 20px 20px 50px;
     background: #eee;
 }
-form > div > input[type="text"]:focus,
-form > div > input[type="email"]:focus,
-form > div > input[type="password"]:focus {
+#login-form > div > input[type="text"]:focus,
+#login-form > div > input[type="email"]:focus,
+#login-form > div > input[type="password"]:focus {
     outline: 0;
     background: white;
 }
-form > div > input[type="text"]:focus + label,
-form > div > input[type="email"]:focus + label,
-form > div > input[type="password"]:focus + label {
+#login-form > div > input[type="text"]:focus + label,
+#login-form > div > input[type="email"]:focus + label,
+#login-form > div > input[type="password"]:focus + label {
     opacity: 0;
 }
-form > div > input[type="text"]:valid,
-form > div > input[type="email"]:valid,
-form > div > input[type="password"]:valid {
+#login-form > div > input[type="text"]:valid,
+#login-form > div > input[type="email"]:valid,
+#login-form > div > input[type="password"]:valid {
     background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/check.svg);
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 20px 20px;
 }
-form > div > input[type="text"]:valid + label,
-form > div > input[type="email"]:valid + label,
-form > div > input[type="password"]:valid + label {
+#login-form > div > input[type="text"]:valid + label,
+#login-form > div > input[type="email"]:valid + label,
+#login-form > div > input[type="password"]:valid + label {
     opacity: 0;
 }
-form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown),
-form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown),
-form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) {
+#login-form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown),
+#login-form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown),
+#login-form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) {
     background: pink;
 }
-form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown) + label,
-form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown) + label,
-form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) + label {
+#login-form > div > input[type="text"]:invalid:not(:focus):not(:placeholder-shown) + label,
+#login-form > div > input[type="email"]:invalid:not(:focus):not(:placeholder-shown) + label,
+#login-form > div > input[type="password"]:invalid:not(:focus):not(:placeholder-shown) + label {
     opacity: 0;
 }
-form > div > input[type="text"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
-form > div > input[type="email"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
-form > div > input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .requirements {
+#login-form > div > input[type="text"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
+#login-form > div > input[type="email"]:invalid:focus:not(:placeholder-shown) ~ .requirements,
+#login-form > div > input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .requirements {
     max-height: 200px;
     padding: 0 30px 20px 50px;
 }
-form > div .requirements {
+#login-form > div .requirements {
     padding: 0 30px 0 50px;
     color: #999;
     max-height: 0;
@@ -72,7 +72,7 @@ form > div .requirements {
     color: red;
     font-style: italic;
 }
-form input[type="submit"] {
+#login-form input[type="submit"] {
     display: block;
     width: 100%;
     margin: 20px 0;
