--- a/views/login.pug
+++ b/views/login.pug
@@ -3,7 +3,7 @@ extends default
 block content
     link(rel="stylesheet", href="/stylesheets/login.css")
     
-    form(action='#0', id="login-form", method="POST")
+    form(action='/login', id="login-form", method="POST")
         div
             input#username(type='text', name='username', required='', placeholder=' ')
             label(for='username')  UserName
