--- a/views/register.pug
+++ b/views/register.pug
@@ -2,7 +2,7 @@ extends default
 
 block content
     link(rel="stylesheet", href="/stylesheets/register.css")
-    form(action='#0', method="POST")
+    form(id="register-form", action='/register', method="POST")
         div
             input#username(type='text', name='username', required='', placeholder=' ')
             label(for='username')  UserName
