--- a/views/login.pug
+++ b/views/login.pug
@@ -5,8 +5,8 @@ block content
     
     form(action='/login', id="login-form", method="POST")
         div
-            input#username(type='text', name='username', required='', placeholder=' ')
-            label(for='username')  UserName
+            input#username(type='text', name='email', required='', placeholder=' ')
+            label(for='email')  email
         div
             input#password(type='password', name='password', required='', placeholder=' ')
             label(for='password') Password
