--- a/views/default.pug
+++ b/views/default.pug
@@ -47,15 +47,21 @@ html
                                     button(type="submit", class="btn btn-warning") Search
 
         block message
-            #msgType
-            if msgType == "ERROR"
+            if error && error.length > 0
                 div(class="alert alert-danger alert-dismissible")
                     button(type="button", class="close", data-dismiss="alert") &times;
-                    h4 #{msg}
-            else if msgType == "SUCCESS"
+                    if error == "Requires login."
+                        h4 
+                            | Please 
+                            a(href='/login', class="alert-link") login 
+                            | first to proceed.
+                            
+                    else 
+                        h4 #{error}
+            if success && success.length > 0
                 div(class="alert alert-success alert-dismissible")
                     button(type="button", class="close", data-dismiss="alert") &times;
-                    h4 #{msg}
+                    h4 #{success}
                 
         block content
 
