--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -10,7 +10,7 @@ block content
                 input(type="text", id="productName", class="form-control", name="productName", required='', placeholder="product name")
             .custom-file
                 input(type="file", id="productImage", class="custom-file-input", required='', name="productImage")
-                label(class="custom-file-label" for="productImage") Choose file
+                label(class="custom-file-label" for="productImage", id="file-upload") Choose file
             .form-group
                 label(for="description") Product Description:
                 textarea(id="productDescription", class="form-control", rows=5, name="description", placeholder="product description")
