--- a/views/default.pug
+++ b/views/default.pug
@@ -34,7 +34,7 @@ html
                             li.nav-item
                                 a(class="nav-link", href="/categories") Category
                             li.nav-item
-                                a(class="nav-link", href="#Trending") Trending
+                                a(class="nav-link", href="/trending") Trending
                             li.nav-item
                                 a(class="nav-link", href="/products") All Products
                             li.nav-item
