--- a/views/profile.pug
+++ b/views/profile.pug
@@ -3,5 +3,57 @@ extends default
 block content
     link(rel="stylesheet", href="/stylesheets/containerBox.css")
 
-    div(class="container-box container-fluid")
-        h1 Hello, #{user.username}
+    //div(class="container-box container-fluid")
+    //    h1 Hello, #{user.username}
+    .container
+        .row.my-2
+            .col-lg-8.order-lg-2
+                ul.nav.nav-tabs
+                    li.nav-item
+                        a.nav-link.active(href='', data-target='#details', data-toggle='tab') Profile
+                    li.nav-item
+                        a.nav-link(href='', data-target='#wishlist', data-toggle='tab') Wish List
+                    li.nav-item
+                        a.nav-link(href='', data-target='#edit', data-toggle='tab') Edit
+                .tab-content.py-4
+                    #details.tab-pane.active
+                        h2.mb-3 User Details
+                        .row
+                        col-md-6
+                        h6 User Name
+                        p.text-warning
+                           | #{user.username}
+                        h6 Email Address
+                        p.text-warning
+                           | #{user.email}
+                    #wishlist.tab-pane
+
+                    #edit.tab-pane
+                        form(method="POST", enctype="text/plain")
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label User name
+                                .col-lg-9
+                                    input.form-control(type='text', id = "username", name = "username",required='', value= user.username)
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label Email
+                                .col-lg-9
+                                    input.form-control(type='email', id = "email", name = "email", required='', value= user.email)
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label Password
+                                .col-lg-9
+                                    input.form-control(type='password', id= "password", name='password',required='', value='',pattern="(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{6,}")
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label Confirm password
+                                .col-lg-9
+                                    input.form-control(type='password', id="passwordconf" , name='passwordconf',required='', value='')
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label Avatar
+                                .col-lg-9
+                                    label(class="custom-file-label" for="useravatar", id="file-upload")
+                                    input(type="file", id="useravatar", class="custom-file-input", required='', name="useravatar")
+                            .form-group.row
+                                label.col-lg-3.col-form-label.form-control-label
+                                .col-lg-9
+                                    button(type="submit", class="btn btn-primary") Save Changes
+            .col-lg-4.order-lg-1.text-center
+                img.img-fluid.img-thumbnail.mx-auto(src='//placehold.it/150', alt='avatar')
