fix some minor bugs

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -43,7 +43,7 @@ block content
                             .form-group.row
                                 label.col-lg-3.col-form-label.form-control-label Confirm password
                                 .col-lg-9
-                                    input.form-control(type='password', id="passwordconf" , name='passwordconf', value= user.password)
+                                    input.form-control(type='password', id="passwordConf" , name='passwordConf', value= user.password)
                             .form-group.row
                                 label.col-lg-3.col-form-label.form-control-label Avatar
                                 .col-lg-9
