--- a/views/productDetail.pug
+++ b/views/productDetail.pug
@@ -26,9 +26,10 @@ block content
                         label(for="star2" title="Under Average") 2 stars
                         input(type="radio" id="star1" name="rating" value="1")
                         label(for="star1" title="Disappointing") 1 star
-                    button(type="submit", class="btn btn-warning ml-3") Rate      
+                    button(type="submit", class="btn btn-warning ml-3") Rate
                 h4(class="card-title") Description 
-                p(class="card-text") #{product.description}                 
+                p(class="card-text") #{product.description}
+                button(type = "submit", class ="btn btn-warning ") Add to wish list
 
         .row
             h1(class = "col-md-12 text-center") Comments
