--- a/views/profile.pug
+++ b/views/profile.pug
@@ -54,4 +54,4 @@ block content
                                 .col-lg-9
                                     button(type="submit", class="btn btn-primary") Save Changes
             .col-lg-4.order-lg-1.text-center
-                img.img-fluid.img-thumbnail.mx-auto(src='//placehold.it/150', alt='avatar')
+                img.img-fluid.img-thumbnail.mx-auto(src=user.avatar, alt='avatar')
