--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,11 +6,8 @@
     display: block;
 }
 
-header {
-    background-image: url(../images/OrangeJuice.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 0% 10%;
+a:hover {
+    color: inherit;
 }
 
  .btn {
@@ -25,8 +22,9 @@ header {
     color: rgb(248, 237, 220);
  }
 
-nav{
-    background-color: #312109;
+
+#top-nav a:hover {
+    border-bottom: 3px solid rgb(253, 196, 110);
 }
 
 .nav-item {
@@ -36,17 +34,12 @@ nav{
 
 .nav-link {
     font: arial;
-    color: #FDE6C4;
-}
-
-.nav-link:hover {
-    color:#FFFFFF;
+    color: #312109;
 }
 
 #search {
     width: 70%;
 }
-
 
 footer{
     width: 100%;
