--- a/views/products.pug
+++ b/views/products.pug
@@ -3,7 +3,7 @@ extends default
 block content
     link(rel="stylesheet", href="/stylesheets/products.css")
 
-    .container-fluid
+    .container-fluid.mt-3
         div(id ="products",class = "row")
             div(id="addProduct", class='col-md-3 card')
                 a(href ="/addProduct")
